@@ -1,3 +1,7 @@
+2008-11-21  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Cumberland.TilePyramidGenerator/Main.cs: add world extents
+
 2008-11-18  Scott Ellington <scott.ellington@gmail.com> 
 
 	* Cumberland.TilePyramidGenerator/Cumberland.TilePyramidGenerator.csproj,
